# gcl

./: .env.example  .gitignore  DEPLOIEMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: context_processors.py  settings.py  urls.py
questionnaires/: admin.py  forms.py  models.py  test_insee_api.py  tests.py  urls.py  utils.py  views.py
questionnaires/migrations/: 0001_initial.py  0002_alter_questionnaireclient_aisance_outils_and_more.py  0003_questionnaireclient_cabinet_and_more.py
static/base/css/: base.css
static/base/js/: base.js
static/questionnaires/css/: dashboard.css  editer_questionnaire.css  identification.css  login.css  mentions_legales.css  questionnaire.css  recapitulatif.css  styles.css  voir_questionnaire.css
static/questionnaires/js/: autosave.js  main.js  progress-bar.js
templates/: base.html
templates/questionnaires/: home.html  mentions_legales.html
templates/questionnaires/client/: identification.html  introduction copy.html  introduction.html  questionnaire.html  recapitulatif.html
templates/questionnaires/collaborateur/: create_cabinet.html  dashboard.html  editer_questionnaire.html  identification.html  login.html  questionnaire.html  recapitulatif.html  voir_questionnaire.html
templates/questionnaires/partials/: options_collaborateurs.html  options_comptables.html
templates/users/: inscription.html
users/: admin.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_cabinet_user_cabinet.py  0003_remove_user_cabinet_user_cabinets_and_more.py
