[project]
name = "GCL"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-axes>=8.1.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
